# bureaucrat

./: .bureaucrat-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  git.rs  main.rs  parse.rs  util.rs
tests/: cli.rs
