[package]
name = "bureaucrat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
git2 = { version = "0.20", default-features = false, features = [] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
test-case = "*"
